iptables_34/iptables
*nat
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT

*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

# 本地回环
-A INPUT -i lo -j ACCEPT

# 允许已建立的连接
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

#漏扫


#SSH请求
-A INPUT -p tcp --dport 65511 -m limit --limit 3/minute --limit-burst 3 -j ACCEPT
-A INPUT -p tcp --dport 65511 -j DROP

#监控


#办公室IP
-A INPUT -s 221.14.88.149 -j ACCEPT
-A OUTPUT -d 221.14.88.149 -j ACCEPT

#备用机
#-A INPUT -s 221.14.88.149 -j ACCEPT
#-A OUTPUT -d 221.14.88.149 -j ACCEPT

#内网IP
-A INPUT -s 192.168.0.0/16 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -j ACCEPT


# 入-白名单IP
-A INPUT -s 172.26.225.175 -j ACCEPT
-A INPUT -s 172.26.225.176 -j ACCEPT
-A INPUT -s 172.26.225.177 -j ACCEPT
-A INPUT -s 172.225.178 -j ACCEPT
-A INPUT -s 61.158.166.35 -j ACCEPT
-A INPUT -s 61.158.166.40 -j ACCEPT
-A INPUT -s 61.158.166.41 -j ACCEPT
-A INPUT -s 61.158.166.42 -j ACCEPT
-A INPUT -s 61.158.166.43 -j ACCEPT
-A INPUT -s 61.158.166.44 -j ACCEPT
-A INPUT -s 61.158.166.45 -j ACCEPT
-A INPUT -s 61.158.166.46 -j ACCEPT
-A INPUT -s 61.158.237.49 -j ACCEPT
-A INPUT -s 61.158.237.50 -j ACCEPT
-A INPUT -s 61.158.237.51 -j ACCEPT
-A INPUT -s 8.130.15.135 -j ACCEPT
-A INPUT -s 8.130.154.214 -j ACCEPT
-A INPUT -s 8.130.35.132 -j ACCEPT
-A INPUT -s 8.130.84.21 -j ACCEPT
-A INPUT -s 125.46.39.209 -j ACCEPT
-A INPUT -s 61.158.237.52 -j ACCEPT
-A INPUT -s 61.158.237.53 -j ACCEPT
-A INPUT -s 121.89.93.29 -j ACCEPT


# 允许已建立的连接（响应流量）
-A OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# 本地回环
-A OUTPUT -o lo -j ACCEPT

#出-白名单
-A OUTPUT -d 172.26.225.175 -j ACCEPT
-A OUTPUT -d 172.26.225.176 -j ACCEPT
-A OUTPUT -d 172.26.225.177 -j ACCEPT
-A OUTPUT -d 172.225.178 -j ACCEPT
-A OUTPUT -d 61.158.166.35 -j ACCEPT
-A OUTPUT -d 61.158.166.40 -j ACCEPT
-A OUTPUT -d 61.158.166.41 -j ACCEPT
-A OUTPUT -d 61.158.166.42 -j ACCEPT
-A OUTPUT -d 61.158.166.43 -j ACCEPT
-A OUTPUT -d 61.158.166.44 -j ACCEPT
-A OUTPUT -d 61.158.166.45 -j ACCEPT
-A OUTPUT -d 61.158.166.46 -j ACCEPT
-A OUTPUT -d 61.158.237.49 -j ACCEPT
-A OUTPUT -d 61.158.237.50 -j ACCEPT
-A OUTPUT -d 61.158.237.51 -j ACCEPT
-A OUTPUT -d 8.130.15.135 -j ACCEPT
-A OUTPUT -d 8.130.154.214 -j ACCEPT
-A OUTPUT -d 8.130.35.132 -j ACCEPT
-A OUTPUT -d 8.130.84.21 -j ACCEPT
-A OUTPUT -d 125.46.39.209 -j ACCEPT
-A OUTPUT -d 61.158.237.52 -j ACCEPT
-A OUTPUT -d 61.158.237.53 -j ACCEPT
-A INPUT -s 121.89.93.29 -j ACCEPT


#黑名单系统
-A INPUT -s 39.99.152.248 -j ACCEPT
-A OUTPUT -d 39.99.152.248 -j ACCEPT
-A INPUT -s 39.99.229.203 -j ACCEPT
-A OUTPUT -d 39.99.229.203 -j ACCEPT

#额外放行端口
#-A INPUT -p --tcp --dport 端口号 -j ACCEPT
#-A INPUT -p --udp --dport 端口号 -j ACCEPT
#-A OUTPUT -p --tcp --dport 端口号 -j ACCEPT
#-A OUTPUT -p --udp --dport 端口号 -j ACCEPT

#额外放行
#-A OUTPUT -p icmp -j ACCEPT
#-A OUTPUT -p udp --dport 53 -j ACCEPT
#-A OUTPUT -p tcp --dport 80 -j ACCEPT
#-A OUTPUT -p tcp --dport 443 -j ACCEPT

#建立日志
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "BLOCKED-INTPUT: " --log-level 4
-A OUTPUT -m limit --limit 5/min -j LOG --log-prefix "BLOCKED-OUTPUT: " --log-level 4

COMMIT
